--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -8,7 +8,8 @@
   },
   "env": {
     "es6": true,
-    "browser": true
+    "browser": true,
+    "node": true
   },
   "rules": {
     "object-curly-spacing": [
