--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "html-loader": "^1.0.0-alpha.0",
     "html-webpack-plugin": "^3.2.0",
     "mini-css-extract-plugin": "^0.4.3",
+    "url-loader": "^1.1.1",
     "webpack": "^4.20.2",
     "webpack-cli": "^3.1.2"
   }
