--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "macOSNotifJS",
-  "version": "0.0.4",
+  "version": "0.0.5-beta1",
   "description": "A simple Javascript plugin to create simulated macOS notifications on your website.",
   "main": "src/macOSNotif.js",
   "scripts": {
