Update deps & webpack/babel build

--- a/.babelrc
+++ b/.babelrc
@@ -1,15 +1,15 @@
 {
   "presets": [
     [
-      "env", {
+      "@babel/preset-env", {
+        "corejs": "2.x",
+        "forceAllTransforms": true,
+        "useBuiltIns": "entry",
         "targets": {
-          "browsers": [
-            "ie >= 10"
-          ],
-          "uglify": true
+          "browsers": "> 0.25%, not dead"
         },
         "exclude": ["transform-regenerator", "transform-async-to-generator"],
-        "debug": true,       
+        "debug": true,
         "loose": true
       }
     ]
