--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "macOSNotifJS",
-  "version": "0.0.5",
+  "name": "macosnotif",
+  "version": "0.0.6",
   "description": "A simple Javascript plugin to create simulated macOS notifications on your website.",
-  "main": "src/macOSNotif.js",
+  "browser": "src/macOSNotif.js",
   "scripts": {
     "build": "webpack"
   },
@@ -18,23 +18,24 @@
   },
   "homepage": "https://macosnotif.js.org",
   "devDependencies": {
-    "@babel/core": "^7.1.2",
-    "@babel/plugin-proposal-object-rest-spread": "^7.0.0",
-    "@babel/plugin-transform-template-literals": "^7.0.0",
-    "babel-loader": "^8.0.4",
+    "@babel/core": "^7.4.5",
+    "@babel/plugin-proposal-object-rest-spread": "^7.4.4",
+    "@babel/plugin-transform-template-literals": "^7.4.4",
+    "@babel/preset-env": "^7.4.5",
+    "@babel/polyfill": "^7.4.4",
+    "babel-loader": "^8.0.6",
     "babel-plugin-async-to-promises": "^1.0.5",
     "babel-plugin-transform-es3-member-expression-literals": "^6.22.0",
     "babel-plugin-transform-es3-property-literals": "^6.22.0",
-    "babel-preset-env": "^7.0.0-beta.3",
-    "core-js": "^2.5.7",
-    "css-loader": "^1.0.0",
-    "file-loader": "^2.0.0",
+    "core-js": "2.x",
+    "css-loader": "^2.1.1",
+    "file-loader": "^4.0.0",
     "html-loader": "^1.0.0-alpha.0",
     "html-webpack-plugin": "^3.2.0",
-    "mini-css-extract-plugin": "^0.4.3",
+    "mini-css-extract-plugin": "^0.7.0",
     "optimize-css-assets-webpack-plugin": "^5.0.1",
-    "url-loader": "^1.1.1",
-    "webpack": "^4.20.2",
-    "webpack-cli": "^3.1.2"
+    "url-loader": "^2.0.0",
+    "webpack": "^4.33.0",
+    "webpack-cli": "^3.3.2"
   }
 }
