--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "macosnotif",
-  "version": "0.1.0-beta1",
+  "version": "0.1.0-beta2",
   "description": "A simple Javascript plugin to create simulated macOS notifications on your website.",
   "main": "src/macOSNotif.js",
   "browser": "dist/macOSNotif.min.js",
@@ -29,6 +29,7 @@
     "@babel/plugin-transform-template-literals": "^7.4.4",
     "@babel/polyfill": "^7.4.4",
     "@babel/preset-env": "^7.4.5",
+    "@wessberg/color": "^1.0.5",
     "babel-loader": "^8.0.6",
     "babel-plugin-async-to-promises": "^1.0.5",
     "babel-plugin-transform-es3-member-expression-literals": "^6.22.0",
