Update package.json & create proper pre-flight / build process

--- a/.babelrc
+++ b/.babelrc
@@ -6,7 +6,7 @@
         "forceAllTransforms": true,
         "useBuiltIns": "entry",
         "exclude": ["transform-regenerator", "transform-async-to-generator"],
-        "debug": true,
+        "debug": false,
         "loose": true
       }
     ]
