Add jsdoc rules to eslint

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -77,6 +77,24 @@
     "radix": [
       "error",
       "always"
+    ],
+    "require-jsdoc": [
+      "error",
+      {
+        "require": {
+          "FunctionDeclaration": true,
+          "MethodDefinition": true,
+          "ClassDeclaration": true,
+          "ArrowFunctionExpression": true,
+          "FunctionExpression": true
+        }
+      }
+    ],
+    "valid-jsdoc": [
+      "error",
+      {
+        "requireReturn": false
+      }
     ]
   }
 }
