--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "macosnotif",
-  "version": "0.1.0",
+  "version": "0.1.1-beta1",
   "description": "A simple Javascript plugin to create simulated macOS notifications on your website.",
   "browser": "dist/macOSNotif.min.js",
   "style": "dist/macOSNotif.min.css",
@@ -51,6 +51,7 @@
     "fontmin": "^0.9.7-beta",
     "html-loader": "^1.0.0-alpha.0",
     "html-webpack-plugin": "^3.2.0",
+    "jsdoc-api": "^5.0.1",
     "mini-css-extract-plugin": "^0.7.0",
     "optimize-css-assets-webpack-plugin": "^5.0.1",
     "url-loader": "^2.0.0",
